--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ img {
   display: flex;
   justify-content:flex-end;
   align-items: center;
-  margin-right: 10rem;
+  margin-right: 9rem;
   margin-left: 3rem;
   gap: 15px;
   grid-column: 2;
@@ -119,3 +119,73 @@ img {
 .profile-name p {
   font-weight: bold;
 }
+
+main{
+  grid-row: 2 / 4;
+  background-color: rgb(226,232,240);
+}
+
+.top-bar{
+  display: flex;
+  align-items: center;
+  justify-content:space-between;
+  background-color: white;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.15);
+  padding: 20px 10px;
+  grid-row: 2 / 3;
+}
+
+.hero{
+  display: flex;
+  align-items: center;
+  margin-left: 3rem;
+  gap: 1rem;
+}
+
+.hero-pic img{
+  width: 4rem;
+  height: 4rem;
+  border-radius: 30px;
+}
+
+.greeting{
+  display: flex;
+  flex-direction: column;
+  gap: 0.5px;
+  margin: 0;
+}
+
+.greeting-text{
+  font-weight: bold;
+  padding-bottom: 10px;
+  margin: 0;
+}
+
+.two{
+  font-size: 1.8rem;
+}
+
+.hero-buttons{
+  display: flex;
+  gap: 2rem;
+  margin-right: 8rem;
+}
+
+.button{
+  border-radius: 20px;
+  background-color: rgb(25,146,212);
+  border: none;
+  color: white;
+  padding: 10px 30px;
+  font-weight: bold;
+}
+
+.main-content{
+  display: grid;
+  grid-row: 2 / 3;
+}
+
+.project-items{
+  display: grid;
+}
+
