--- a/style.css
+++ b/style.css
@@ -1,9 +1,13 @@
 html{
   font-family:Arial, Helvetica, sans-serif;
+  margin: 0;
+  min-height: 100%;
 }
 
 body{
   margin: 0;
+  min-height: 100%;
+  min-width: 100%;
 }
 
 img {
@@ -11,28 +15,36 @@ img {
   pointer-events: none; 
 }
 
+p{
+  margin: 0;
+}
+
 .container{
   display: grid;
-  grid-template-columns: 40vh 170vh;
-  grid-template-rows: 10vh 20vh 70vh;
+  grid-template-columns: minmax(0, 0.25fr) minmax(0, 1fr);
+  grid-template-rows: auto 1fr auto;
+  width: clamp(1300px, 99vw, 99vw);
+  height: 100%;
 }
 .sidebar{
   background-color: rgb(25,146,212);  
-  grid-row: 1 / 4;
+  grid-row: 1 / 3;
   grid-column: 1 / 2;
+  height: 100%;
 }
 
 .sidebar-items{
-  margin-left: 1rem;
+  margin-left: 4%;
   gap: 3.5rem;
   display: flex;
   flex-direction: column;
+  
 }
 .dashboard{
   display: flex;
   gap: 8px;
   align-items: center;
-  margin-right: 5rem;
+  margin-right: 2%;
   margin-top: 0.8rem;
 }
 
@@ -52,6 +64,7 @@ img {
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  max-width: max-content;
 }
 
 .sidebar-content{
@@ -75,27 +88,30 @@ img {
 
 .header{
   display: flex;
-  justify-content:flex-end;
+  justify-content:center;
   align-items: center;
-  margin-right: 9rem;
-  margin-left: 3rem;
-  gap: 15px;
+  margin-right: auto;
+  margin-left: auto;
+  gap: 2%;
   grid-column: 2;
   grid-row: 1 / 2;
+  max-width: 100%;
+  width: clamp(20vw, 100vw, 100vw);
+  margin-top: 5px;
 }
 
 .search-icon img {
   width: 1.5rem;  
   height: 1.5rem;  
   vertical-align: middle;
-  margin-right: 12px;
+  margin-right: auto;
 }
 
 .search-icon input {
   border-radius: 40px;
   background-color: rgb(226,232,240);
   border: 0;
-  width: 38rem;
+  width: clamp(20vw, 40vw, 60vw);
   height: 2rem;
 }
 
@@ -123,6 +139,8 @@ img {
 main{
   grid-row: 2 / 4;
   background-color: rgb(226,232,240);
+  min-height: 100vh;
+  height: auto;
 }
 
 .top-bar{
@@ -181,11 +199,72 @@ main{
 }
 
 .main-content{
-  display: grid;
   grid-row: 2 / 3;
+  margin-left: 2rem;
+  margin-top: 2rem; 
+}
+
+
+.main-content{
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  grid-template-rows: 50% 50%;
+  padding-bottom: 55px;
+}
+
+.my-projects h1{
+  font-size: 1.5rem;
+  grid-row: 1 / 3;
 }
 
 .project-items{
   display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+  gap: 10px;
+  width: 80%;
 }
+
+.project-container{
+  background-color: white;
+  border-left: 5px solid rgb(252, 189, 0);
+  height: 12rem;
+  border-radius: 5px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.15);
+  height: 100%;
+  display: grid;
+  grid-template-rows: 0.1fr 2fr 1fr;
+  grid-template-columns: 1fr;
+}
+
+.pro-one,.pro-two,.pro-three,.pro-four,
+.pro-five,.pro-six{
+  margin-left: 4%;
+  margin-right: 2%;
+}
+
+.project-header{
+  font-size: 1rem;
+  font-weight: bold;
+  height: 1.2rem;
+  padding-top: 40px;
+  padding-bottom: 5px;
+}
+
+.project-description{
+  font-size: 0.8rem;
+}
+
+.project-icon{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: end;
+  gap: 0.8rem;
+}
+
+.project-img{
+  width: 20px;
+  height: 20px;
+}
+
 
